Bug 361048 - QML-based cropper does not support virtual desktops spanning multiple screens
Summary: QML-based cropper does not support virtual desktops spanning multiple screens
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-27 17:34 UTC by Martin Herkt
Modified: 2016-03-27 18:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In: 16.04
Sentry Crash Report:


Attachments
Patch to fix editor pixmap scaling (724 bytes, patch)
2016-03-27 18:08 UTC, Martin Herkt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Herkt 2016-03-27 17:34:24 UTC
The QML-based cropper (in git master) currently fullscreens only on a single display instead of spanning the entire virtual desktop. This is a regression.

Reproducible: Always

Steps to Reproduce:
1. Use “rectangular region” capture mode

Actual Results:  
Cropper displays only on one screen, virtual desktop screenshot is downscaled to fit. Will save the downscaled region.

Expected Results:  
Cropper window spans entire virtual desktop.

Using i3, not KWin. I don’t think it matters, though.
Displays set up like this:
1920x1080 | 1920x1080 (primary)
Comment 1 Boudhayan Gupta 2016-03-27 17:36:36 UTC
Please test with kwin once.
Comment 2 Martin Herkt 2016-03-27 17:37:45 UTC
Same behavior with KWin.
Comment 3 Boudhayan Gupta 2016-03-27 18:02:19 UTC
Git commit 639a1f4f4d9bcb9f088a0a0552a0ec05be61207d by Boudhayan Gupta.
Committed on 27/03/2016 at 18:01.
Pushed by bgupta into branch 'Applications/16.04'.

Editor window should be as big as pixmap
FIXED-IN: 16.04

M  +3    -0    src/QuickEditor/QuickEditor.cpp

http://commits.kde.org/kscreengenie/639a1f4f4d9bcb9f088a0a0552a0ec05be61207d
Comment 4 Martin Herkt 2016-03-27 18:08:37 UTC
Created attachment 98116 [details]
Patch to fix editor pixmap scaling

Almost.
Works with this patch.
Comment 5 Boudhayan Gupta 2016-03-27 18:12:06 UTC
Comment on attachment 98116 [details]
Patch to fix editor pixmap scaling

That patch will break HiDPI support. I'll try to fix it by hooking to Window instead of Screen
Comment 6 Boudhayan Gupta 2016-03-27 18:25:53 UTC
Git commit a1782fc05cab519ecd1437eefbe0b418081e4118 by Boudhayan Gupta.
Committed on 27/03/2016 at 18:25.
Pushed by bgupta into branch 'Applications/16.04'.

Fix image sizing inside the editor

M  +2    -2    src/QuickEditor/EditorRoot.qml

http://commits.kde.org/kscreengenie/a1782fc05cab519ecd1437eefbe0b418081e4118
Comment 7 Boudhayan Gupta 2016-03-27 18:36:10 UTC
Fixed now?
Comment 8 Martin Herkt 2016-03-27 18:38:48 UTC
Yup, fixed. Nice bonus would be to center the “click anywhere” message on the active screen instead of the entire window.
Comment 9 Boudhayan Gupta 2016-03-27 18:56:42 UTC
Could you please file another wishlist bug for that so I remember to fix it?