Editor window should be as big as pixmap

BUG: 361048
FIXED-IN: 16.04