src/QuickEditor/QuickEditor.cpp
@@ -84,6 +84,9 @@ QuickEditor::QuickEditor(const QPixmap &pixmap, QObject *parent) :
 
     d->mQuickView = new QQuickView(d->mQmlEngine, 0);
     d->mQuickView->setSource(QUrl("qrc:///QuickEditor/EditorRoot.qml"));
+
+    d->mQuickView->setFlags(Qt::BypassWindowManagerHint | Qt::WindowStaysOnTopHint | Qt::FramelessWindowHint | Qt::Tool);
+    d->mQuickView->setGeometry(0, 0, pixmap.width(), pixmap.height());
     d->mQuickView->showFullScreen();
 
     // connect up the signals
